src/less/custom/_monitor_overview.less
.alert {
  position:fixed;
  bottom: 0;
  left: 38%;
  width: 33%;
  z-index:9999;
  display:none;
}

.monFieldset {
  ul {
    li {
      list-style-type: none;
      float: left;
      margin-right: 3em;
      margin-bottom: 2em;
      label {
        cursor: pointer;
        height: 9em;
      }
    }
  }
}


.monitor_overview {
  padding: 10px;
  border: 2px solid transparent;
  border-radius: 5px;
  input[type=checkbox] {
    //opacity: 0;
    display: none;
  }
  .fa-television{
    display: block;
    text-align: center;
    margin-bottom: 10px;
    position: relative;
    i {
      position: absolute;
      font-size: 0.5em;
      left: 62.5px;
      top: 10px;
    }
  }
}

#editButton {
  margin:0 auto;
  margin-top: 50px;
  display:block;
}

#monitorForm {
  float: left;
  width: 100%;
}

label > p {
  width: 11em;
  text-align: center;
}

#monitorPanel {
  padding: 15px 15px 0px 15px;
  position: relative;
}

#previewPanel {
  display: none;
  float: left;
  margin-left: 10px;
  width: 33%;
  max-height: 72.5vh;
}

#previewPanel > .panel-body {
  h2 {
    width: 100%;
    text-align: center;
  }
}

#monitorPanel {
  #headingDiv > h3 {
      float: left;
      margin-top: 0;
  }

  #headingDiv > .btn-group {
      margin-left: 20px;
  }
}

#headingDiv {
  width: 100%;
  height: 30px;
  margin-top: 20px;
  margin-bottom: 10px;
}

#monDetails {
  margin-top: 20px;
  font-weight: bold;
}

#logoutButton {
  margin-top: 7px;
  margin-right: 10px;
}

.resourceContent {
  display: none;
}

.monitorContainer {
  max-height: 72.5vh;
  overflow-y: scroll;
  float:left;
  border: 1px solid #ddd;
  border-radius: 10px;
}

